--- a/src/styles/business.less
+++ b/src/styles/business.less
@@ -1,67 +1,180 @@
 // 火花
 .sparks {
+  .sparksFrame(~`'tuia-sparks_'+Math.round(Math.random() * 1.0e8)`);
   background-image: url('//yun.tuisnake.com/mami-media/img/e9064d2f-3644-413b-b62b-d8451f5fe76a.png');
   background-repeat: no-repeat;
   background-position: -10000px -10000px;
   background-size: 400% 300%;
   transform: scale(1.8);
-  animation: keyframes-sparks 0.4s steps(1) 0s 1;
 }
-@keyframes keyframes-sparks {
-  0% {
-    background-size: 400% 300%;
+.sparksFrame(@name) {
+  @keyframes @name {
+    0% {
+      background-size: 400% 300%;
+    }
+  
+    10.00% {
+      background-position: 33.33333333333333% 0%;
+    }
+  
+    20.00% {
+      background-position: 0% 50%;
+    }
+  
+    30.00% {
+      background-position: 33.33333333333333% 50%;
+    }
+  
+    40.00% {
+      background-position: 66.66666666666666% 0%;
+    }
+  
+    50.00% {
+      background-position: 66.66666666666666% 50%;
+    }
+  
+    60.00% {
+      background-position: 0% 100%;
+    }
+  
+    70.00% {
+      background-position: 33.33333333333333% 100%;
+    }
+  
+    80.00% {
+      background-position: 66.66666666666666% 100%;
+    }
+  
+    90.00%,
+    100% {
+      background-position: 100% 0%;
+    }
   }
-
-  10.00% {
-    background-position: 33.33333333333333% 0%;
-  }
-
-  20.00% {
-    background-position: 0% 50%;
-  }
-
-  30.00% {
-    background-position: 33.33333333333333% 50%;
-  }
-
-  40.00% {
-    background-position: 66.66666666666666% 0%;
-  }
-
-  50.00% {
-    background-position: 66.66666666666666% 50%;
-  }
-
-  60.00% {
-    background-position: 0% 100%;
-  }
-
-  70.00% {
-    background-position: 33.33333333333333% 100%;
-  }
-
-  80.00% {
-    background-position: 66.66666666666666% 100%;
-  }
-
-  90.00%,
-  100% {
-    background-position: 100% 0%;
-  }
+  animation: @name 0.4s steps(1) 0s 1;
 }
 
 .sparksLight {
   .BG('//yun.tuisnake.com/h5-mami/GoldMining_Video/firstSparkSprites.5d7e57.png');
   background-size: 2500px 1000px;
   transform: scale(2);
-  animation: spark-play 0.5s steps(1);
-
-  @keyframes spark-play {
+  .sparksLightFrame(~`'tuia-sparks_light_'+Math.round(Math.random() * 1.0e8)`)
+  
+}
+.sparksLightFrame(@name) {
+  @keyframes @name {
     0% { background-position: 0 0; }
     20.00% { background-position: -500px 0; }
     40.00% { background-position: -1000px 0; }
     60.00% { background-position: -1500px 0; }
     80.00% { background-position: -2000px 0; }
     100.00% { background-position: 0 -500px; }
+  }
+  animation: @name 0.5s steps(1);
+}
+
+// 金币
+.coin {
+  background-image: url('//yun.tuisnake.com/h5-mani/turncard_mix/174a5f04-1c9c-4387-8f63-1936ccb230bd.png');
+  background-size: 4600px 600px;
+  .coinFrame(~`'tuia-coin_'+Math.round(Math.random() * 1.0e8)`)
+}
+.coinFrame(@name) {
+  @keyframes @name {
+    0% {
+      background-position: 0 0;
+    }
+    4.55% { background-position: -200px 0; }
+    9.09% { background-position: -400px 0; }
+    13.64% { background-position: -600px 0; }
+    18.18% { background-position: -800px 0; }
+    22.73% { background-position: -1000px 0; }
+    27.27% { background-position: -1200px 0; }
+    31.82% { background-position: -1400px 0; }
+    36.36% { background-position: -1600px 0; }
+    40.91% { background-position: -1800px 0; }
+    45.45% { background-position: -2000px 0; }
+    50.00% { background-position: -2200px 0; }
+    54.55% { background-position: -2400px 0; }
+    59.09% { background-position: -2600px 0; }
+    63.64% { background-position: -2800px 0; }
+    68.18% { background-position: -3000px 0; }
+    72.73% { background-position: -3200px 0; }
+    77.27% { background-position: -3400px 0; }
+    81.82% { background-position: -3600px 0; }
+    86.36% { background-position: -3800px 0; }
+    90.91% { background-position: -4000px 0; }
+
+    95.45% {
+      background-position: -4200px 0;
+      opacity: 1;
+    }
+
+    100.00% {
+      background-position: -4400px 0;
+      opacity: 0;
+    }
+  }
+  animation: @name 0.92s steps(1) both;
+}
+.coin2 {
+  background-image: url('//yun.tuisnake.com/h5-mani/turncard_mix/06715b73-3cf0-4c0f-a62c-fceaccbe845f.png');
+  background-size: 4800px 1200px;
+  .coin2Frame(~`'tuia-coin2_'+Math.round(Math.random() * 1.0e8)`)
+}
+.coin2Frame(@name) {
+  animation: @name 0.92s steps(1) both;
+
+  @keyframes @name {
+    0% {
+      background-position: 0 0;
+    }
+    2.44% { background-position: -300px 0; }
+    4.88% { background-position: -600px 0; }
+    7.32% { background-position: -900px 0; }
+    9.76% { background-position: -1200px 0; }
+    12.20% { background-position: -1500px 0; }
+    14.63% { background-position: -1800px 0; }
+    17.07% { background-position: -2100px 0; }
+    19.51% { background-position: -2400px 0; }
+    21.95% { background-position: -2700px 0; }
+    24.39% { background-position: -3000px 0; }
+    26.83% { background-position: -3300px 0; }
+    29.27% { background-position: -3600px 0; }
+    31.71% { background-position: -3900px 0; }
+    34.15% { background-position: -4200px 0; }
+    36.59% { background-position: -4500px 0; }
+    39.02% { background-position: 0 -400px; }
+    41.46% { background-position: -300px -400px; }
+    43.90% { background-position: -600px -400px; }
+    46.34% { background-position: -900px -400px; }
+    48.78% { background-position: -1200px -400px; }
+    51.22% { background-position: -1500px -400px; }
+    53.66% { background-position: -1800px -400px; }
+    56.10% { background-position: -2100px -400px; }
+    58.54% { background-position: -2400px -400px; }
+    60.98% { background-position: -2700px -400px; }
+    63.41% { background-position: -3000px -400px; }
+    65.85% { background-position: -3300px -400px; }
+    68.29% { background-position: -3600px -400px; }
+    70.73% { background-position: -3900px -400px; }
+    73.17% { background-position: -4200px -400px; }
+    75.61% { background-position: -4500px -400px; }
+    78.05% { background-position: 0 -800px; }
+    80.49% { background-position: -300px -800px; }
+    82.93% { background-position: -600px -800px; }
+    85.37% { background-position: -900px -800px; }
+    87.80% { background-position: -1200px -800px; }
+    90.24% { background-position: -1500px -800px; }
+    92.68% { background-position: -1800px -800px; }
+
+    95.45% {
+      background-position: -2100px -800px;
+      opacity: 1;
+    }
+
+    100.00% {
+      background-position: -2700px -800px;
+      opacity: 0;
+    }
   }
 }
