--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,3 +1,17 @@
 @import './base.less';
 @import './animation.less';
 @import './business.less';
+.ele1 {
+  width: 200px;
+  height: 200px;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-image: url('//yun.tuisnake.com/tact/0f17a5ab-6033-471f-abf7-6ee9913f2a56.png');
+}
+.ele2 {
+  width: 159px * 2;
+  height: 95px * 2;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-image: url('//yun.tuisnake.com/tact/71125fed-bea3-4f23-b0ac-28b6891f23a8.png');
+}
