--- a/examples/common/style/demo-home.less
+++ b/examples/common/style/demo-home.less
@@ -3,8 +3,7 @@
   width: 100%;
   min-height: 100vh;
   padding: 46px 20px 20px;
-  background: #fff;
-
+  background-color: #fff;
   &__title,
   &__desc {
     padding-left: 16px;
