--- a/src/styles/animation.less
+++ b/src/styles/animation.less
@@ -189,6 +189,7 @@
   .bounceFrame(~`'tuia-bounce_'+Math.round(Math.random() * 1.0e8)`);
 }
 .bounceFrame(@name) {
+  animation-duration: 1s;
   animation-name: @name;
   -webkit-transform-origin: center bottom;
   transform-origin: center bottom;
