--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,6 +1,8 @@
 @import './base.less';
 @import './animation.less';
 @import './business.less';
+@import './animate.less';
+
 .ele1 {
   width: 200px;
   height: 200px;
