--- a/src/styles/animate.less
+++ b/src/styles/animate.less
@@ -64,3 +64,18 @@
   animation-timing-function: ease-in;
   animation-iteration-count: infinite;
 }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+.tuia_animate_fadeIn {
+  animation-name: fadeIn;
+  animation-duration: 0.7s;
+  animation-fill-mode: forwards;
+}
