feat: update docs

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -2,6 +2,16 @@
 @import './animation.less';
 @import './business.less';
 @import './animate.less';
+:root {
+  --animate-duration: 1s;
+  --animate-delay: 1s;
+  --animate-repeat: 1;
+}
+
+.tuia_animate_animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
 
 .ele1 {
   width: 200px;
