--- a/src/styles/animation.less
+++ b/src/styles/animation.less
@@ -335,3 +335,27 @@
 .bounceIn(@duration: 1s) {
   .bounceInFrames(~`'tuia-bounceIn_'+Math.round(Math.random() * 1.0e8)`);
 }
+.bounceOutFrames(@name) {
+  animation-name: @name;
+  transform-origin: center bottom;
+  animation-duration: calc((@duration) * 0.75);
+  @keyframes @name {
+    20% {
+      transform: scale3d(0.9, 0.9, 0.9);
+    }
+  
+    50%,
+    55% {
+      opacity: 1;
+      transform: scale3d(1.1, 1.1, 1.1);
+    }
+  
+    to {
+      opacity: 0;
+      transform: scale3d(0.3, 0.3, 0.3);
+    }
+  }
+}
+.bounceOut(@duration: 1s) {
+  .bounceOutFrames(~`'tuia-bounceOut_'+Math.round(Math.random() * 1.0e8)`);
+}
