--- a/src/styles/animate.less
+++ b/src/styles/animate.less
@@ -83,6 +83,20 @@
   animation-duration: 0.4s;
   animation-fill-mode: forwards;
 }
+@keyframes fadeOutUp {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+    transform: translate3d(0, -100%, 0);
+  }
+}
+
+.tuia_animate_fadeOutUp {
+  animation-name: fadeOutUp;
+}
 
 @keyframes moveX {
   0% {
