--- a/src/styles/animate.less
+++ b/src/styles/animate.less
@@ -68,6 +68,20 @@
   animation-duration: 0.7s;
   animation-fill-mode: forwards;
 }
+@keyframes fadeInRight {
+  from {
+    opacity: 0;
+    transform: translate3d(100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+.tuia_animate_fadeInRight {
+  animation-name: fadeInRight;
+}
 
 @keyframes fadeOut {
   0% {
