--- a/src/styles/business.less
+++ b/src/styles/business.less
@@ -396,3 +396,115 @@
   background-size: 1955px 291px;
   animation: sparks3 0.27s steps(1) 1;
 }
+// 闪光
+.shine1 {
+  width: 200px;
+  height: 200px;
+  background-image: url('//yun.tuisnake.com/animation/f3467f10-b5d4-4a9d-be22-4b19414ce0b6.png');
+  background-size: 3600px 200px;
+  .shine1Frame(~`'tuia-shine1_'+Math.round(Math.random() * 1.0e8)`)
+}
+.shine1Frame(@name) {
+  animation: @name 0.75s steps(1) both;
+
+  @keyframes @name {
+    0% { background-position: 0px 0px; }
+    5.88% { background-position: -200px 0px; }
+    11.76% { background-position: -400px 0px; }
+    17.65% { background-position: -600px 0px; }
+    23.53% { background-position: -800px 0px; }
+    29.41% { background-position: -1000px 0px; }
+    35.29% { background-position: -1200px 0px; }
+    41.18% { background-position: -1400px 0px; }
+    47.06% { background-position: -1600px 0px; }
+    52.94% { background-position: -1800px 0px; }
+    58.82% { background-position: -2000px 0px; }
+    64.71% { background-position: -2200px 0px; }
+    70.59% { background-position: -2400px 0px; }
+    76.47% { background-position: -2600px 0px; }
+    82.35% { background-position: -2800px 0px; }
+    88.24% { background-position: -3000px 0px; }
+    94.12% { background-position: -3200px 0px; }
+    100.00% { background-position: -3400px 0px; }
+  }
+}
+@keyframes shine1{
+  0% { background-position: 0px 0px; }
+	5.88% { background-position: -200px 0px; }
+	11.76% { background-position: -400px 0px; }
+	17.65% { background-position: -600px 0px; }
+	23.53% { background-position: -800px 0px; }
+	29.41% { background-position: -1000px 0px; }
+	35.29% { background-position: -1200px 0px; }
+	41.18% { background-position: -1400px 0px; }
+	47.06% { background-position: -1600px 0px; }
+	52.94% { background-position: -1800px 0px; }
+	58.82% { background-position: -2000px 0px; }
+	64.71% { background-position: -2200px 0px; }
+	70.59% { background-position: -2400px 0px; }
+	76.47% { background-position: -2600px 0px; }
+	82.35% { background-position: -2800px 0px; }
+	88.24% { background-position: -3000px 0px; }
+	94.12% { background-position: -3200px 0px; }
+	100.00% { background-position: -3400px 0px; }
+}
+.tuia_animate_shine1 {
+  width: 200px;
+  height: 200px;
+  background-image: url('//yun.tuisnake.com/animation/f3467f10-b5d4-4a9d-be22-4b19414ce0b6.png');
+  background-size: 3600px 200px;
+  animation: shine1 0.75s steps(1);
+}
+
+.shine2 {
+  width: 300px;
+  height: 300px;
+  background-image: url('//yun.tuisnake.com/animation/8edae148-6dfe-44e6-b2e4-db3159ec8ff2.png');
+  background-size: 4500px 300px;
+  .shine2Frame(~`'tuia-shine2_'+Math.round(Math.random() * 1.0e8)`)
+}
+.shine2Frame(@name) {
+  animation: @name 0.62s steps(1) both;
+
+  @keyframes @name {
+    0% { background-position: 0px 0px; }
+    7.14% { background-position: -300px 0px; }
+    14.29% { background-position: -600px 0px; }
+    21.43% { background-position: -900px 0px; }
+    28.57% { background-position: -1200px 0px; }
+    35.71% { background-position: -1500px 0px; }
+    42.86% { background-position: -1800px 0px; }
+    50.00% { background-position: -2100px 0px; }
+    57.14% { background-position: -2400px 0px; }
+    64.29% { background-position: -2700px 0px; }
+    71.43% { background-position: -3000px 0px; }
+    78.57% { background-position: -3300px 0px; }
+    85.71% { background-position: -3600px 0px; }
+    92.86% { background-position: -3900px 0px; }
+    100.00% { background-position: -4200px 0px; }
+  }
+}
+@keyframes shine2{
+  0% { background-position: 0px 0px; }
+	7.14% { background-position: -300px 0px; }
+	14.29% { background-position: -600px 0px; }
+	21.43% { background-position: -900px 0px; }
+	28.57% { background-position: -1200px 0px; }
+	35.71% { background-position: -1500px 0px; }
+	42.86% { background-position: -1800px 0px; }
+	50.00% { background-position: -2100px 0px; }
+	57.14% { background-position: -2400px 0px; }
+	64.29% { background-position: -2700px 0px; }
+	71.43% { background-position: -3000px 0px; }
+	78.57% { background-position: -3300px 0px; }
+	85.71% { background-position: -3600px 0px; }
+	92.86% { background-position: -3900px 0px; }
+	100.00% { background-position: -4200px 0px; }
+}
+.tuia_animate_shine2 {
+  width: 300px;
+  height: 300px;
+  background-image: url('//yun.tuisnake.com/animation/8edae148-6dfe-44e6-b2e4-db3159ec8ff2.png');
+  background-size: 4500px 300px;
+  animation: shine2 0.62s steps(1);
+}
