feat: update docs

--- a/docs/.vuepress/theme/styles/markdown.styl
+++ b/docs/.vuepress/theme/styles/markdown.styl
@@ -149,6 +149,8 @@
     font-weight: bold;
     color: #1f6fb5;
     border-bottom: 1px solid #1f6fb5;
+  }
+  .header-anchor {
     display: none;
   }
 
