--- a/src/styles/business.less
+++ b/src/styles/business.less
@@ -508,3 +508,117 @@
   background-size: 4500px 300px;
   animation: shine2 0.62s steps(1);
 }
+
+.shine3 {
+  width: 200px;
+  height: 200px;
+  background-image: url('//yun.tuisnake.com/animation/262ec06c-e1a8-43b4-aca3-99084fa44413.png');
+  background-size: 4400px 200px;
+  .shine3Frame(~`'tuia-shine3_'+Math.round(Math.random() * 1.0e8)`)
+}
+.shine3Frame(@name) {
+  animation: @name 0.88s steps(1) infinite;
+
+  @keyframes @name {
+    0% { background-position: 0px 0px; }
+    4.76% { background-position: -200px 0px; }
+    9.52% { background-position: -400px 0px; }
+    14.29% { background-position: -600px 0px; }
+    19.05% { background-position: -800px 0px; }
+    23.81% { background-position: -1000px 0px; }
+    28.57% { background-position: -1200px 0px; }
+    33.33% { background-position: -1400px 0px; }
+    38.10% { background-position: -1600px 0px; }
+    42.86% { background-position: -1800px 0px; }
+    47.62% { background-position: -2000px 0px; }
+    52.38% { background-position: -2200px 0px; }
+    57.14% { background-position: -2400px 0px; }
+    61.90% { background-position: -2600px 0px; }
+    66.67% { background-position: -2800px 0px; }
+    71.43% { background-position: -3000px 0px; }
+    76.19% { background-position: -3200px 0px; }
+    80.95% { background-position: -3400px 0px; }
+    85.71% { background-position: -3600px 0px; }
+    90.48% { background-position: -3800px 0px; }
+    95.24% { background-position: -4000px 0px; }
+    100.00% { background-position: -4200px 0px; }
+  }
+}
+@keyframes shine3 {
+  0% { background-position: 0px 0px; }
+	4.76% { background-position: -200px 0px; }
+	9.52% { background-position: -400px 0px; }
+	14.29% { background-position: -600px 0px; }
+	19.05% { background-position: -800px 0px; }
+	23.81% { background-position: -1000px 0px; }
+	28.57% { background-position: -1200px 0px; }
+	33.33% { background-position: -1400px 0px; }
+	38.10% { background-position: -1600px 0px; }
+	42.86% { background-position: -1800px 0px; }
+	47.62% { background-position: -2000px 0px; }
+	52.38% { background-position: -2200px 0px; }
+	57.14% { background-position: -2400px 0px; }
+	61.90% { background-position: -2600px 0px; }
+	66.67% { background-position: -2800px 0px; }
+	71.43% { background-position: -3000px 0px; }
+	76.19% { background-position: -3200px 0px; }
+	80.95% { background-position: -3400px 0px; }
+	85.71% { background-position: -3600px 0px; }
+	90.48% { background-position: -3800px 0px; }
+	95.24% { background-position: -4000px 0px; }
+	100.00% { background-position: -4200px 0px; }
+}
+.tuia_animate_shine3 {
+  width: 200px;
+  height: 200px;
+  background-image: url('//yun.tuisnake.com/animation/262ec06c-e1a8-43b4-aca3-99084fa44413.png');
+  background-size: 4400px 200px;
+  animation: shine3 0.88s steps(1) infinite;
+}
+
+.shine4 {
+  width: 500px;
+  height: 400px;
+  background-image: url('//yun.tuisnake.com/animation/745a4203-e079-469a-bb15-feadd62cd0d1.png');
+  background-size: 5000px 800px;
+  .shine4Frame(~`'tuia-shine4_'+Math.round(Math.random() * 1.0e8)`)
+}
+.shine4Frame(@name) {
+  animation: @name 0.5s steps(1) infinite;
+
+  @keyframes @name {
+    0% { background-position: 0px 0px; }
+    9.09% { background-position: -500px 0px; }
+    18.18% { background-position: -1000px 0px; }
+    27.27% { background-position: -1500px 0px; }
+    36.36% { background-position: -2000px 0px; }
+    45.45% { background-position: -2500px 0px; }
+    54.55% { background-position: -3000px 0px; }
+    63.64% { background-position: -3500px 0px; }
+    72.73% { background-position: -4000px 0px; }
+    81.82% { background-position: -4500px 0px; }
+    90.91% { background-position: 0px -400px; }
+    100.00% { background-position: -500px -400px; }
+  }
+}
+@keyframes shine4 {
+  0% { background-position: 0px 0px; }
+	9.09% { background-position: -500px 0px; }
+	18.18% { background-position: -1000px 0px; }
+	27.27% { background-position: -1500px 0px; }
+	36.36% { background-position: -2000px 0px; }
+	45.45% { background-position: -2500px 0px; }
+	54.55% { background-position: -3000px 0px; }
+	63.64% { background-position: -3500px 0px; }
+	72.73% { background-position: -4000px 0px; }
+	81.82% { background-position: -4500px 0px; }
+	90.91% { background-position: 0px -400px; }
+	100.00% { background-position: -500px -400px; }
+}
+.tuia_animate_shine4 {
+  width: 500px;
+  height: 400px;
+  background-image: url('//yun.tuisnake.com/animation/745a4203-e079-469a-bb15-feadd62cd0d1.png');
+  background-size: 5000px 800px;
+  animation: shine4 0.5s steps(1) infinite;
+}
