feat: update docs and workspace

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,14 +1,13 @@
-@import './base.less';
-@import './animation.less';
-@import './business.less';
-@import './animate.less';
+@import 'base.less';
+@import 'business.less';
+@import 'animate.less';
 :root {
   --animate-duration: 1s;
   --animate-delay: 1s;
   --animate-repeat: 1;
 }
 
-.tuia_animate_animated {
+.animated {
   animation-duration: 1s;
   animation-fill-mode: both;
 }
