--- a/src/styles/animate.less
+++ b/src/styles/animate.less
@@ -1,378 +1,27 @@
-@charset "UTF-8";
-/*
-* 基础使用的animate class
-*/
+/* bouncing  */
+@import 'bouncing/bounce.less';
+@import 'bouncing/bounceIn.less';
+@import 'bouncing/bounceOut.less';
 
-@keyframes bounce {
-  from,
-  20%,
-  53%,
-  to {
-    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-    transform: translate3d(0, 0, 0);
-  }
+/* fade  */
+@import 'fade/fadeIn.less';
+@import 'fade/fadeInLeft.less';
+@import 'fade/fadeInRight.less';
+@import 'fade/fadeOut.less';
+@import 'fade/fadeOutUp.less';
 
-  40%,
-  43% {
-    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-    transform: translate3d(0, -30px, 0) scaleY(1.1);
-  }
+/* move  */
+@import 'move/moveX.less';
+@import 'move/moveY.less';
 
-  70% {
-    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-    transform: translate3d(0, -15px, 0) scaleY(1.05);
-  }
+/* rotating  */
+@import 'rotating/rotate.less';
 
-  80% {
-    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-    transform: translate3d(0, 0, 0) scaleY(0.95);
-  }
-
-  90% {
-    transform: translate3d(0, -4px, 0) scaleY(1.02);
-  }
-}
-.tuia_animate_bounce {
-  animation-name: bounce;
-  transform-origin: center bottom;
-}
-
-@keyframes breathe {
-  0%,
-    100% {
-      transform: scale(1);
-    }
-
-    50% {
-      transform: scale(0.95);
-    }
-}
-.tuia_animate_breathe {
-  animation-name: breathe;
-  animation-duration: 0.7s;
-  animation-timing-function: ease-in;
-  animation-iteration-count: infinite;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-.tuia_animate_fadeIn {
-  animation-name: fadeIn;
-  animation-duration: 0.7s;
-  animation-fill-mode: forwards;
-}
-@keyframes fadeInRight {
-  from {
-    opacity: 0;
-    transform: translate3d(100%, 0, 0);
-  }
-
-  to {
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
-  }
-}
-.tuia_animate_fadeInRight {
-  animation-name: fadeInRight;
-}
-@keyframes fadeInLeft {
-  from {
-    opacity: 0;
-    transform: translate3d(-100%, 0, 0);
-  }
-
-  to {
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
-  }
-}
-
-.tuia_animate_fadeInLeft {
-  animation-name: fadeInLeft;
-}
-@keyframes fadeOut {
-  0% {
-    opacity: 1;
-  }
-
-  100% {
-    opacity: 0;
-  }
-}
-.tuia_animate_fadeOut {
-  animation-name: fadeOut;
-  animation-duration: 0.4s;
-  animation-fill-mode: forwards;
-}
-@keyframes fadeOutUp {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: 0;
-    transform: translate3d(0, -100%, 0);
-  }
-}
-
-.tuia_animate_fadeOutUp {
-  animation-name: fadeOutUp;
-}
-
-@keyframes moveX {
-  0% {
-    transform: translateX(0)
-  }
-
-  100% {
-    transform: translateX(100%);
-  }
-}
-.tuia_animate_moveX {
-  animation-name: moveX;
-  animation-duration: 0.3s;
-  animation-timing-function: ease;
-}
-
-@keyframes moveY {
-  0% {
-    transform: translateY(100%)
-  }
-
-  100% {
-    transform: translateY(0);
-  }
-}
-.tuia_animate_moveY {
-  animation-name: moveY;
-  animation-duration: 0.3s;
-  animation-timing-function: ease;
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
-.tuia_animate_rotate {
-  animation-name: rotate;
-  animation-duration: 9s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-}
-
-@keyframes wave {
-  0%,
-  40%,
-  80%,
-  100% {
-    transform: rotate(0);
-  }
-
-  20%,
-  60% {
-    transform: rotate(30deg);
-  }
-}
-.tuia_animate_wave {
-  animation-name: wave;
-  animation-duration: 0.6s;
-  animation-iteration-count: infinite;
-}
-
-@keyframes shake {
-  from,
-  80% {
-    transform: rotate(0);
-  }
-
-  20% {
-    transform: rotate(6deg);
-  }
-
-  45% {
-    transform: rotate(-4deg);
-  }
-
-  60% {
-    transform: rotate(2deg);
-  }
-}
-.tuia_animate_shake {
-  animation-name: shake;
-  animation-duration: 0.8s;
-  animation-timing-function: ease-out;
-  animation-iteration-count: infinite;
-}
-
-@keyframes shakeHurried {
-  0%,
-  to {
-    transform: translateZ(0);
-  }
-
-  10%,
-  20% {
-    transform: rotate(-3deg) translateZ(0);
-  }
-
-  30%,
-  50%,
-  70%,
-  90% {
-    transform: rotate(3deg) translateZ(0);
-  }
-
-  40%,
-  60%,
-  80% {
-    transform: rotate(-3deg) translateZ(0);
-  }
-}
-.tuia_animate_shakeHurried {
-  animation-name: shakeHurried;
-  animation-duration: 0.6s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-delay: 0.3s;
-  animation-direction: alternate;
-}
-
-@keyframes flash {
-  from,
-  50%,
-  to {
-    opacity: 1;
-  }
-
-  25%,
-  75% {
-    opacity: 0;
-  }
-}
-.tuia_animate_flash {
-  animation-name: flash;
-}
-
-@keyframes rubberBand {
-  from {
-    transform: scale3d(1, 1, 1);
-  }
-
-  30% {
-    transform: scale3d(1.25, 0.75, 1);
-  }
-
-  40% {
-    transform: scale3d(0.75, 1.25, 1);
-  }
-
-  50% {
-    transform: scale3d(1.15, 0.85, 1);
-  }
-
-  65% {
-    transform: scale3d(0.95, 1.05, 1);
-  }
-
-  75% {
-    transform: scale3d(1.05, 0.95, 1);
-  }
-
-  to {
-    transform: scale3d(1, 1, 1);
-  }
-}
-
-.tuia_animate_rubberBand {
-  animation-name: rubberBand;
-}
-@keyframes bounceIn {
-  from,
-  20%,
-  40%,
-  60%,
-  80%,
-  to {
-    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-
-  0% {
-    opacity: 0;
-    transform: scale3d(0.3, 0.3, 0.3);
-  }
-
-  20% {
-    transform: scale3d(1.1, 1.1, 1.1);
-  }
-
-  40% {
-    transform: scale3d(0.9, 0.9, 0.9);
-  }
-
-  60% {
-    opacity: 1;
-    transform: scale3d(1.03, 1.03, 1.03);
-  }
-
-  80% {
-    transform: scale3d(0.97, 0.97, 0.97);
-  }
-
-  to {
-    opacity: 1;
-    transform: scale3d(1, 1, 1);
-  }
-}
-.tuia_animate_bounceIn {
-  animation-duration: calc(var(--animate-duration) * 0.75);
-  animation-name: bounceIn;
-}
-@keyframes bounceOut {
-  20% {
-    transform: scale3d(0.9, 0.9, 0.9);
-  }
-
-  50%,
-  55% {
-    opacity: 1;
-    transform: scale3d(1.1, 1.1, 1.1);
-  }
-
-  to {
-    opacity: 0;
-    transform: scale3d(0.3, 0.3, 0.3);
-  }
-}
-.tuia_animate_bounceOut {
-  animation-duration: calc(var(--animate-duration) * 0.75);
-  animation-name: bounceOut;
-}
-// 漂浮
-@keyframes float {
-  25% {
-    transform: translateY(-4px);
-  }
-  50%, 100% {
-    transform: translateY(0);
-  }
-  75% {
-    transform: translateY(4px);
-  }
-}
-.tuia_animate_float {
-  animation-duration: calc(var(--animate-duration) * 0.75);
-  animation-name: float;
-  animation-iteration-count: infinite;
-}
+/* others  */
+@import 'others/breathe.less';
+@import 'others/flash.less';
+@import 'others/float.less';
+@import 'others/rubberBand.less';
+@import 'others/shake.less';
+@import 'others/shakeHurried.less';
+@import 'others/wave.less';
